baseline-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: busypod-non-priliveged
spec:
  containers:
    - image: busybox
      name: busybox
      command: ["sh", "-c", 'while true; do echo "Running..."; sleep 2h; done']
      imagePullPolicy: Always
      securityContext:
        privileged: false
        capabilities:
          add: ["CHOWN"]
