canary-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v1
  namespace: canary-demo
  labels:
    app: hello-app
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
      version: v1
  template:
    metadata:
      labels:
        app: hello-app
        version: v1
    spec:
      containers:
      - name: hello
        image: docker.io/eyesoncloud/test-prod:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-v1-svc
  namespace: canary-demo
spec:
  selector:
    app: hello-app
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
