nginx-tls-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-nginx
  template:
    metadata:
      labels:
        app: hello-world-nginx
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: nginx
        image: quay.io/redhattraining/hello-world-nginx
        ports:
        - containerPort: 8443
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: nginx-tls
          mountPath: /etc/nginx/ssl
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-tls-config
      - name: nginx-tls
        secret:
          secretName: nginx-passthrough-tls
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-nginx
spec:
  selector:
    app: hello-world-nginx
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
  type: ClusterIP
