canary-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-app-prod
  namespace: canary-demo
spec:
  to:
    kind: Service
    name: hello-app-v1-svc
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
